# kdb-x-mcp-server-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ALPHAVANTAGE_ALGO_TRADING_PLAN.md  ALPHAVANTAGE_TOOLS_API.md
mcp-clients/: README.md  claude-desktop.md  github-copilot-vscode.md
src/mcp_server/: __init__.py  server.py  settings.py
src/mcp_server/prompts/: __init__.py  _template.py  kdbx_table_analysis.py
src/mcp_server/providers/: __init__.py  alphavantage.py  base.py
src/mcp_server/resources/: __init__.py  _template.py  kdbx_database_tables.py  kdbx_sql_query_guidance.py  kdbx_sql_query_guidance.txt
src/mcp_server/tools/: __init__.py  _template.py  kdbx_database_tables_tool.py  kdbx_get_volume_by_sym_and_algo_tool.py  kdbx_run_sql_query.py  kdbx_sim_search.py  kdbx_sql_query_guidance_tool.py
src/mcp_server/tools/alphavantage/: __init__.py  data_provider.py  fx.py  momentum.py  moving_averages.py  oscillators.py  risk.py  sentiment.py  signals.py  trend.py  volatility.py  volume.py
src/mcp_server/utils/: embeddings.csv  embeddings.py  embeddings_helpers.py  format_utils.py  kdbx.py  logging.py
