[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server for KDB-X"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pykx==4.0.0.b1",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
mcp-server = "mcp_server:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
